infrastructure/platform/apps/spicedb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: spicedb
  namespace: spicedb
  annotations:
    external-dns.alpha.kubernetes.io/target: 51.159.109.202
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: https
  hostnames:
    - spicedb.apps.waddle.social
  rules:
    - backendRefs:
        - name: spicedb
          port: 50051
